parsing-assignment/Assn3/PizzaLang.java
/* PizzaLang.java */
/* Generated By:JavaCC: Do not edit this line. PizzaLang.java */
public class PizzaLang implements PizzaLangConstants {
  public static void main(String[] args) throws Exception
  {
    try
    {
      Pizza     pizza;

      pizza     = new PizzaLang(new java.io.StringReader(args[0])).paragraph();
      System.out.println("Enjoy your " + pizza);
    }
    catch  (Exception e)
    {
      System.err.println(e + "  No pizza for you!");
    }
  }

  static final public Pizza paragraph() throws ParseException {Pizza dough;
  Pizza spread;
  Pizza toppings;
    dough = dough();
    spread = spread();
    toppings = toppings();
    bake();
    eat();
    jj_consume_token(0);
dough.combineWith(spread);
    dough.combineWith(toppings);
    {if ("" != null) return dough;}
    throw new Error("Missing return statement in function");
}

  static final public Pizza dough() throws ParseException {Pizza pizza = new Pizza();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BUY:{
      jj_consume_token(BUY);
      jj_consume_token(PIZZA);
      jj_consume_token(DOUGH);
      jj_consume_token(5);
pizza.chooseDoughSource(DoughSource.BUY);
      break;
      }
    case MIX:{
      jj_consume_token(MIX);
      jj_consume_token(7);
      jj_consume_token(KNEAD);
      jj_consume_token(7);
      jj_consume_token(RISE);
      jj_consume_token(AND);
      jj_consume_token(ROLL);
      jj_consume_token(DOUGH);
      jj_consume_token(5);
pizza.chooseDoughSource(DoughSource.MAKE);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return pizza;}
    throw new Error("Missing return statement in function");
}

  static final public Pizza spread() throws ParseException {Pizza pizza = new Pizza();
  Sauce sauceType;
    jj_consume_token(SPREAD);
    jj_consume_token(OLIVE);
    jj_consume_token(OIL);
    jj_consume_token(AND);
    sauceType = sauce();
pizza.chooseSauce(sauceType);
    {if ("" != null) return pizza;}
    throw new Error("Missing return statement in function");
}

  static final public Sauce sauce() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOMATO:{
      jj_consume_token(TOMATO);
      jj_consume_token(SAUCE);
      jj_consume_token(5);
{if ("" != null) return Sauce.TOMATO;}
      break;
      }
    case PESTO:{
      jj_consume_token(PESTO);
      jj_consume_token(SAUCE);
      jj_consume_token(5);
{if ("" != null) return Sauce.PESTO;}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Pizza toppings() throws ParseException {Pizza pizza = new Pizza();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOP:{
      jj_consume_token(TOP);
      jj_consume_token(WITH);
      pizza = TopList();
{if ("" != null) return pizza;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
{if ("" != null) return pizza;}
    }
    throw new Error("Missing return statement in function");
}

  static final public Pizza TopList() throws ParseException {Pizza pizza = new Pizza();
  Toppings      topping;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHEESE:{
      jj_consume_token(CHEESE);
topping = Toppings.CHEESE;
      pizza.addToppings(topping);
      break;
      }
    case MUSHROOMS:{
      jj_consume_token(MUSHROOMS);
topping = Toppings.MUSHROOMS;
      pizza.addToppings(topping);
      break;
      }
    case SPINACH:{
      jj_consume_token(SPINACH);
topping = Toppings.SPINACH;
      pizza.addToppings(topping);
      break;
      }
    case PEPPERONI:{
      jj_consume_token(PEPPERONI);
topping = Toppings.PEPPERONI;
      pizza.addToppings(topping);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    TopCont(pizza);
{if ("" != null) return pizza;}
    throw new Error("Missing return statement in function");
}

  static final public void TopCont(Pizza pizza) throws ParseException {Toppings      topping;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 7:{
      jj_consume_token(7);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CHEESE:{
        jj_consume_token(CHEESE);
topping = Toppings.CHEESE;
        pizza.addToppings(topping);
        break;
        }
      case MUSHROOMS:{
        jj_consume_token(MUSHROOMS);
topping = Toppings.MUSHROOMS;
        pizza.addToppings(topping);
        break;
        }
      case SPINACH:{
        jj_consume_token(SPINACH);
topping = Toppings.SPINACH;
        pizza.addToppings(topping);
        break;
        }
      case PEPPERONI:{
        jj_consume_token(PEPPERONI);
topping = Toppings.PEPPERONI;
        pizza.addToppings(topping);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      TopCont(pizza);
      break;
      }
    case 5:{
      jj_consume_token(5);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void bake() throws ParseException {
    jj_consume_token(BAKE);
    jj_consume_token(IN);
    jj_consume_token(A);
    jj_consume_token(PREHEATED);
    jj_consume_token(OVEN);
    jj_consume_token(5);
}

  static final public void eat() throws ParseException {
    jj_consume_token(NOW);
    jj_consume_token(EAT);
    jj_consume_token(IT);
    jj_consume_token(6);
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public PizzaLangTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x300,0x600000,0x800,0x1e000000,0x1e000000,0xa0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public PizzaLang(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PizzaLang(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new PizzaLangTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public PizzaLang(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new PizzaLangTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new PizzaLangTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public PizzaLang(PizzaLangTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(PizzaLangTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[36];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 6; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 36; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
